# kara

./: .gitignore  Dockerfile.client  Dockerfile.server  LICENSE  README.md  docker-compose.yml  pyproject.toml
client/: main.py
server/: main.py
